# scierzko-znajdywacz

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: okno_glowne.h  tester_konsolowy.h  widok_planszy.h
src/: algorytm.cpp  algorytm.h  legend_item.cpp  legend_item.h  main.cpp  okno_glowne.cpp  plansza.cpp  plansza.h  punkt.h  tester_konsolowy.cpp  widok_planszy.cpp  widok_planszy.h
